@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-30T00:33:13Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 31,
+  "timestamp" : "2022-03-30T08:10:13Z",
+  "count" : 14,
+  "count_minmax" : [ 0, 14 ],
+  "count_prev_day_inc" : 68,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
