@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-30T00:33:13Z",
+  "timestamp" : "2022-03-30T08:10:13Z",
   "count_outdated" : 546,
   "uniques_outdated" : 35,
-  "count" : 764,
-  "uniques" : 43,
+  "count" : 801,
+  "uniques" : 44,
   "views" : [
     {
       "timestamp": "2022-03-21T00:00:00Z",
@@ -56,8 +56,15 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 37,
-      "count_minmax": [ 0, 37 ],
+      "count": 60,
+      "count_minmax": [ 0, 60 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-03-30T00:00:00Z",
+      "count": 14,
+      "count_minmax": [ 0, 14 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
