@@ -1,5 +1,5 @@
 {
-  "count": 218,
+  "count": 255,
   "uniques": 1,
   "views": [
     {
@@ -39,7 +39,12 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 37,
+      "count": 60,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-03-30T00:00:00Z",
+      "count": 14,
       "uniques": 1
     }
   ]
