@@ -1,3 +1,9 @@
+2022-03-30T08:10:13Z:
+* notice: last 14d: all unq: 255 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 764 43
+* notice: next accum: outdated-all outdated-unq / all unq: 546 35 / 801 44
+* notice: prev json diff // prev day diff: unq all: +1 +37 / -0 -0 // +1 +68 / -0 -0
+
 2022-03-30T00:33:13Z:
 * notice: last 14d: all unq: 218 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 540 34 / 733 43
